# mcp

src/amplify-gen2-mcp-server/: .gitignore  AWS_STRANDS_TEST_SUMMARY.md  BASELINE_RESULTS.md  CHANGELOG.md  CODE_GENERATION_TESTS.md  CUSTOM_FUNCTIONS_UPDATE.md  Dockerfile  FUNCTIONAL_TESTING_GUIDE.md  IMPLEMENTATION_GUIDE.md  IMPROVEMENTS_SUMMARY.md  LAMBDA_HELP_FEATURE.md  LAMBDA_LOGS_FEATURE.md  NOTICE  README.md  TEST_RUNNER_README.md  amplify_functional_tests.py  aws_strands_test.py  aws_strands_test_enhanced.py  chat_summary.md  custom_functions_enhancement.py  demo_enhanced_features.py  docker-healthcheck.sh  install.sh  mcp-config-example.json  mcp-config-github-branch.json  mcp-config-github-updated.json  mcp-config-github.json  pyproject.toml  run_amplify_tests.py  test.sh  test_config.json  test_custom_functions_fix.py  test_custom_python_functions_search.py  test_enhanced.sh  test_enhanced_samples.py  test_lambda_help.py  test_lambda_logs.py  test_lambda_logs_demo.py  test_mcp_lambda_help.py  test_mcp_tools.py  (+5 more)
src/amplify-gen2-mcp-server/awslabs/: __init__.py
src/amplify-gen2-mcp-server/awslabs/amplify_gen2_mcp_server/: __init__.py  consts.py  models.py  server.py  tools.py
src/amplify-gen2-mcp-server/tests/: __init__.py  conftest.py  test_models.py  test_server.py  test_tools.py
src/amplify-gen2-mcp-server/tests/example_code/functions/demo-function/: handler.ts  resources.ts
src/amplify-gen2-mcp-server/tests/example_code/functions/demo_function-layers/: handler.ts  resources.ts
src/cloudscape-mcp-server/: .gitignore  CHANGELOG.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  example-config.json  pyproject.toml
src/cloudscape-mcp-server/awslabs/: __init__.py
src/cloudscape-mcp-server/awslabs/cloudscape_mcp_server/: __init__.py  demos.py  documentation.py  models.py  server.py
src/cloudscape-mcp-server/examples/: usage_examples.py
src/cloudscape-mcp-server/tests/: test_server.py
